using VContainer;
using VContainer.Unity;

namespace _Project.Main
{
    public class MainLifetimeScope : LifetimeScope
    {
        protected override void Configure(IContainerBuilder builder)
        {
            builder.RegisterEntryPoint<MainManager>();
        }
    }
}